--- a/css1.css
+++ b/css1.css
@@ -67,3 +67,62 @@ body{
 .google{
     background-color: rgb(193, 4, 4);
 }
+form input[type="text"],
+form input[type="password"]{
+    width: 320px;
+    padding: 12px;
+    margin-bottom: 12px;
+    border: 1px solid gray;
+    border-radius: 8px;
+    font-size: 15px;
+}
+.remember{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    margin-bottom: 15px;
+    font-size: 15px;
+    gap: 6px;
+}
+.signinb{
+    width: 100%;
+    padding: 12px;
+    background-color: black;
+    color: white;
+    font-size: 17px;
+    font-weight: bold;
+    border-radius: 8px;
+    margin-bottom: 15px;
+}
+.forgot{
+    color: gray;
+    text-decoration: none;
+    font-size: 15px;
+}
+.footer{
+    margin: 0;
+    width: 100%;
+    height: 100px;
+    padding: 20px 0;
+    background-color: rgb(0, 61, 114);
+    border-top: 1px solid gray;
+    margin-top: 40px;
+}
+.content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.content p{
+    color: white;
+    font-size: 15px;
+}
+.links a {
+    margin-left: 20px;
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
+    transition: 0.3s;
+}
