--- a/css1.css
+++ b/css1.css
@@ -5,7 +5,7 @@
     padding:  10px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: rgba(255, 254, 250);
-    border-bottom: 1px solid rgb(191, 191, 191);
+    border-bottom: 1px solid rgb(191,191, 191);
 }
 .logo img{
     height: auto;
@@ -17,11 +17,12 @@
     font-weight: bold;
     font-size: 18px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: rgb(98, 98, 98);
+    color: rgb(0, 96, 181);
 }
 body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color:rgba(255, 254, 250);
+    background:url(background.png);
 }
 .Login{
     width: 350px;
@@ -30,9 +31,9 @@ body{
     padding: 35px;
     border-radius: 10px;
     text-align: center;
-    border: 1px solid rgb(191, 191, 191);
+    border: 1px solid rgb(191,191, 191);
 }
-.Login h2{
+.Login h1{
     margin-bottom: 20px;
 }
 .apple,.facebook,.google{
@@ -88,8 +89,9 @@ form input[type="password"]{
 .signinb{
     width: 100%;
     padding: 12px;
-    background-color: black;
-    color: white;
+    border: 0px;
+    background-color:rgb(0, 188, 131);
+    color:white;
     font-size: 17px;
     font-weight: bold;
     border-radius: 8px;
