--- a/css2.css
+++ b/css2.css
@@ -26,24 +26,47 @@
 }
 .kategorite p{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: gray ;
+    color:white ;
     text-align: center;
     width: 400px;
     margin: 0px auto;
 }
+body{
+    background: url(bacground3.png);
+}
 .workouts{
     display: flex;
-    justify-content: baseline;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 25px;
+    margin-top: 30px;
+    padding: 10px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: rgb(0, 96, 181);
     font-size: 17px;
+}
+.wo{
+    height: 400px;
+     width: 300px;
+     align-items: center;
+     padding: 40px;
+     border: 2px solid white;
+     background-color: white;
+     border-radius: 20px;
 }
 .wo img{
     height: 200px;
     width: 300px;
     border-radius: 4px;
-    border: 2px solid rgb(191,191, 191);
-
+}
+.tit{
+    font-weight: bold;
+    font-size: 20px;
+}
+.pershkrimi{
+    font-size: 16px;
+    color: gray;
 }
 .footer{
     margin: 0;
