--- a/css1.css
+++ b/css1.css
@@ -20,6 +20,8 @@
     color: rgb(0, 96, 181);
 }
 body{
+    margin: 0;
+    padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color:rgba(255, 254, 250);
     background:url(background.png);
