--- a/css2.css
+++ b/css2.css
@@ -32,6 +32,8 @@
     margin: 0px auto;
 }
 body{
+    margin: 0;
+    padding: 0;
     background: url(bacground3.png);
 }
 .workouts{
@@ -50,7 +52,7 @@ body{
     height: 400px;
      width: 300px;
      align-items: center;
-     padding: 40px;
+     padding: 30px;
      border: 2px solid white;
      background-color: white;
      border-radius: 20px;
@@ -58,7 +60,7 @@ body{
 .wo img{
     height: 200px;
     width: 300px;
-    border-radius: 4px;
+    border-radius: 20px;
 }
 .tit{
     font-weight: bold;
