--- a/css1.css
+++ b/css1.css
@@ -5,7 +5,7 @@
     padding:  10px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: rgba(255, 254, 250);
-    border-bottom: 1px solid rgb(191,191, 191);
+    
 }
 .logo img{
     height: auto;
@@ -27,52 +27,23 @@ body{
     background:url(background.png);
 }
 .Login{
-    width: 350px;
+    width: 23%;
     margin: 50px auto;
     background-color: rgba(255, 254, 250);
     padding: 35px;
     border-radius: 10px;
     text-align: center;
-    border: 1px solid rgb(191,191, 191);
+    
 }
 .Login h1{
     margin-bottom: 20px;
 }
-.apple,.facebook,.google{
-    padding: 12px;
-    margin-bottom: 10px;
-    border-radius: 8px;
-    font-weight: bold;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-}
-.apple img{
-    height: 20px;
-    width: 18px;
-}
-.facebook img{
-    height: 18px;
-    width: 18px;
-}
-.google img{
-    height: 18px;
-    width: 18px;
-}
-.apple{
-    background-color: black;
-}
-.facebook{
-    background-color: blue;
-}
-.google{
-    background-color: rgb(193, 4, 4);
+.info{
+    color: gray;
 }
 form input[type="text"],
 form input[type="password"]{
-    width: 320px;
+    width: 90%;
     padding: 12px;
     margin-bottom: 12px;
     border: 1px solid gray;
@@ -82,13 +53,28 @@ form input[type="password"]{
 .remember{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     gap: 8px;
-    margin-bottom: 15px;
+    margin: 15px 0;
     font-size: 15px;
+}
+.remember-left{
+    display: flex;
+    align-items: center;
     gap: 6px;
 }
 .signinb{
+    width: 100%;
+    padding: 12px;
+    border: 0px;
+    background-color:rgb(0, 188, 131);
+    color:white;
+    font-size: 17px;
+    font-weight: bold;
+    border-radius: 8px;
+    margin-bottom: 15px;
+}
+.signup{
     width: 100%;
     padding: 12px;
     border: 0px;
@@ -129,4 +115,17 @@ form input[type="password"]{
     font-weight: bold;
     color: white;
     transition: 0.3s;
+}
+@media (max-width: 600px) {
+    .Login {
+        width: 50%;
+        padding: 25px;
+    }
+    form input[type="text"],
+    form input[type="password"] {
+        width: 90%;
+    }
+    .remember {
+        font-size: 14px;
+    }
 }
